# dsrecords

./: .gitlab-ci.yml  Examples.ipynb  README.md  mkdocs.yml  pyproject.toml  requirements.txt  test.py
docs/: formats.md  index.md  records-format.md  references.md
src/: __init__.py  base.py  core.py  core_v1.py  io.py
tests/: compat_test.py  e2e_test.py
