[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dsrecords"
description = "Easy to hack and dead-simple RecordIO-like data storing. Inspired by MXNet's RecordIO and Protobuf."
version = "0.4.13"
authors = [{ name = "Hùng Nguyễn", email = "ndgnuh@protonmail.com" }]
readme = "README.md"
keywords = ["RecordIO"]
license = { text = "MIT" }

[tool.setuptools.package-dir]
dsrecords = "src"
